feat: Enhance UI with detailed animal information and additional measurements display